--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ branches:
 before_script:
   - sudo add-apt-repository ppa:ansible/ansible-2.6 -y
   - sudo apt-get update
-  - sudo apt-get install python3-pip shellcheck ansible python3-gpg shellcheck
+  - sudo apt-get install python3-pip shellcheck ansible python-gpg shellcheck
   - pip3 install -r dev-requirements.txt
   - sudo pip2 install -r dev-requirements.txt
   - openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d
