--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,7 @@ before_script:
   - sudo add-apt-repository ppa:ansible/ansible-2.6 -y
   - sudo apt-get update
   - sudo apt-get install python3-pip shellcheck ansible python-gpgme shellcheck
-  - pip3 install -r dev-requirements.txt
-  - sudo pip2 install -r dev-requirements.txt
+  - pip install -r requirements.txt
   - openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d
   - echo $test_random_key > .anslk_random_testkey
 
