--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ services:
 
 env: SH="docker exec -t ubuntu-test bash -c"
 
+before_install:
+  - docker run -d --name ubuntu-test -e LC_ALL="en_US.UTF-8" -e LANG="en_US.UTF-8" -v $(pwd):/travis -w /travis ubuntu:latest tail -f /dev/null
+  - docker ps
 
 # matrix:
 #   include:
