--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ python:
 services:
   - docker
 
-env: SH="docker exec -t ubuntu-test bash -c"
+env:
+  - SH="docker exec -t ubuntu-test bash -c"
+  - SUDO="" 
 
 before_install:
   - docker run -d --name ubuntu-test -e LC_ALL="en_US.UTF-8" -e LANG="en_US.UTF-8" -v $(pwd):/travis -w /travis ubuntu:latest tail -f /dev/null
@@ -27,9 +29,9 @@ branches:
     - /devel.*/
 
 before_script:
-  - $SH sudo add-apt-repository ppa:ansible/ansible-2.6 -y
-  - $SH sudo apt-get update
-  - $SH sudo apt-get install python3-pip shellcheck ansible python-gpgme shellcheck
+  - $SH $SUDO add-apt-repository ppa:ansible/ansible-2.6 -y
+  - $SH $SUDO apt-get update
+  - $SH $SUDO apt-get install python3-pip shellcheck ansible python-gpgme shellcheck
   - $SH pip install -r requirements.txt
   - $SH "openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d"
   - $SH "echo $test_random_key > .anslk_random_testkey"
