--- a/.travis.yml
+++ b/.travis.yml
@@ -28,32 +28,31 @@ branches:
     - /devel.*/
 
 before_script:
-  - "echo $SH $SUDO apt-get install software-properties-common"
-  - "$SH $SUDO add-apt-repository ppa:ansible/ansible-2.6 -y"
-  - "$SH $SUDO apt-get update"
-  - "$SH $SUDO apt-get install python3-pip shellcheck ansible python-gpgme shellcheck"
-  - "$SH pip install -r requirements.txt"
-  - "$SH openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d"
-  - "$SH echo $test_random_key > .anslk_random_testkey"
+  - $SH "apt-get install software-properties-common"
+  - $SH "$SUDO add-apt-repository ppa:ansible/ansible-2.6 -y"
+  - $SH "$SUDO apt-get update"
+  - $SH "$SUDO apt-get install python3-pip shellcheck ansible python-gpgme shellcheck"
+  - $SH "pip install -r requirements.txt"
+  - $SH "openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d"
+  - $SH "echo $test_random_key > .anslk_random_testkey"
 
 script:
   - $SH "make prepare_travis"
   - $SH "make test"
-  - $SH rm aws_credentials_travis.yml
+  - $SH "rm aws_credentials_travis.yml"
 
 after_script:
-  - $SH openssl aes-256-cbc -K $encrypted_a45cc096e026_key -iv $encrypted_a45cc096e026_iv -in deploy_key.enc -out deploy_key -d
-  - $SH chmod 400 deploy_key
-  - $SH ./push_on_success.sh
-  - $SH rm deploy_key
+  - $SH "openssl aes-256-cbc -K $encrypted_a45cc096e026_key -iv $encrypted_a45cc096e026_iv -in deploy_key.enc -out deploy_key -d"
+  - $SH "chmod 400 deploy_key"
+  - $SH "./push_on_success.sh"
+  - $SH "rm deploy_key"
   
 before_deploy:
   # Set up git user name and tag this commit
   # - $SH git config --local user.name "YOUR GIT USER NAME"
   # - $SH git config --local user.email "YOUR GIT USER EMAIL"
   - $SH "python3 setup.py sdist" 
-  - $SH export TRAVIS_TAG=${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}
-  - $SH git tag $TRAVIS_TAG
+  - $SH "git tag ${TRAVIS_TAG:-$(date +'%Y%m%d%H%M%S')-$(git log --format=%h -1)}"
 deploy:
   provider: releases
   api_key:
