--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ before_script:
   - $SH "apt-get install -y software-properties-common"
   - $SH "add-apt-repository -y ppa:ansible/ansible-2.6"
   - $SH "apt-get update"
-  - $SH "apt-get install python3-pip shellcheck ansible python3-gpg shellcheck"
+  - $SH "apt-get install -y python3-pip shellcheck ansible python3-gpg shellcheck"
   - $SH "pip install -r requirements.txt"
   - $SH "openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d"
   - $SH "echo $test_random_key > .anslk_random_testkey"
