--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,10 @@ branches:
 before_script:
   - $SH "apt-get update"
   - $SH "apt-get install -y software-properties-common"
-  - $SH "add-apt-repository -y ppa:ansible/ansible-2.6"
+  - $SH "add-apt-repository -y ppa:ansible/ansible-2.7"
   - $SH "apt-get update"
-  - $SH "apt-get install -y python3-pip shellcheck ansible python3-gpg shellcheck"
+  - $SH "apt-get install -y python3-pip shellcheck python3-gpg shellcheck"
+  - $SH "apt-get install -y ansible python-pip python-boto3"
   - $SH "python --version"
   - $SH "pip3 install -r requirements.txt"
   - $SH "openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d"
