--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ services:
   - docker
 
 env:
-  - SH="docker exec -t ubuntu-test bash -c" SUDO=""
+  - SH="docker exec -t backup-test bash -c" SUDO="" DOCKER_IMAGE=alipne:latest SHELLCHECK=/bin/true
+  - SH="docker exec -t backup-test bash -c" SUDO="" DOCKER_IMAGE=ubuntu:latest
 
 before_install:
-  - docker run -d --name ubuntu-test -e LC_ALL="en_US.UTF-8" -e LANG="en_US.UTF-8" -v $(pwd):/travis -w /travis ubuntu:latest tail -f /dev/null
+  - docker run -d --name backup-test -e LC_ALL="en_US.UTF-8" -e LANG="en_US.UTF-8" -v $(pwd):/travis -w /travis $DOCKER_IMAGE tail -f /dev/null
   - docker ps
 
 # matrix:
@@ -28,20 +29,16 @@ branches:
     - /devel.*/
 
 before_script:
-  - $SH "apt-get update"
-  - $SH "apt-get install -y software-properties-common"
-  - $SH "add-apt-repository -y ppa:ansible/ansible-2.7"
-  - $SH "apt-get update"
-  - $SH "apt-get install -y python3-pip shellcheck python3-gpg shellcheck"
-  - $SH "DEBIAN_FRONTEND=noninteractive apt-get install -y ansible python-pip python-boto3"
+  - [[ "$TRAVIS_OS_NAME" == "ubuntu" ]] && $SH "make deb_install"
+  - [[ "$TRAVIS_OS_NAME" == "alpine" ]] && $SH "make apk_install"
   - $SH "python --version"
-  - $SH "pip3 install -r requirements.txt"
+  - $SH "python3.7 -m pip install -r requirements.txt"
   - $SH "openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d"
   - $SH "echo $test_random_key > .anslk_random_testkey"
 
 script:
   - $SH "make prep_test AWS_ACCOUNT_NAME=travis"
-  - $SH "make test PYTHON=python3"
+  - $SH "make test PYTHON=python3.7"
   - $SH "rm aws_credentials_travis.yml"
 
 after_script:
