--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ branches:
     - /devel.*/
 
 before_script:
-  - [[ "$TRAVIS_OS_NAME" == "ubuntu" ]] && $SH "make deb_install"
-  - [[ "$TRAVIS_OS_NAME" == "alpine" ]] && $SH "make apk_install"
+  - '[[ "$TRAVIS_OS_NAME" == "ubuntu" ]] && $SH "make deb_install"'
+  - '[[ "$TRAVIS_OS_NAME" == "alpine" ]] && $SH "make apk_install"'
   - $SH "python --version"
   - $SH "python3.7 -m pip install -r requirements.txt"
   - $SH "openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d"
