fix rules for install by refactoring into one plus add mypy and yaml pre-commit check

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -20,3 +20,9 @@ repos:
         - --ignore=W503,E402,E501,F811
         - --max-line-length=131
         - --builtins=given,when,then
+    - id: check-yaml
+- repo: https://github.com/pre-commit/mirrors-mypy
+  rev: 'master'  # Use the sha / tag you want to point at
+  hooks:
+  -   id: mypy
+      exclude: '^features-mocked/environment.py' 
