--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
   - docker
 
 env:
-  - SH="docker exec -t backup-test bash -c" SUDO="" DOCKER_IMAGE=alpine:latest INSTALL_GOAL=apk_install SHELLCHECK=/bin/true
+  - SH="docker exec -t backup-test sh -c" SUDO="" DOCKER_IMAGE=alpine:latest INSTALL_GOAL=apk_install SHELLCHECK=/bin/true
   - SH="docker exec -t backup-test bash -c" SUDO="" DOCKER_IMAGE=ubuntu:latest INSTALL_GOAL=deb_install
 
 before_install:
@@ -29,7 +29,8 @@ branches:
     - /devel.*/
 
 before_script:
-  - $SH "make $INSTALL_GOAL"
+  - $SH 'if [[ "$TRAVIS_OS_NAME" == "ubuntu" ]]; then make deb_install; fi"'
+  - "make $INSTALL_GOAL"
   - $SH "python --version"
   - $SH "python3.7 -m pip install -r requirements.txt"
   - $SH "openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d"
