--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ branches:
     - /devel.*/
 
 before_script:
-  - $SH '$INSTALL_MAKE'
+  - $SH "$INSTALL_MAKE"
   - $SH "make $INSTALL_GOAL"
   - $SH "python --version"
   - $SH "openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d"
