--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ branches:
 before_script:
   - $SH "$INSTALL_MAKE"
   - $SH "make $INSTALL_GOAL"
-  - $SH "python --version; echo python3 --version"
+  - $SH "python --version; echo ; python2 --version ; python3 --version"
   - $SH "openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d"
   - $SH "echo $test_random_key > .anslk_random_testkey"
 
