--- a/.travis.yml
+++ b/.travis.yml
@@ -30,14 +30,14 @@ branches:
 
 before_script:
   - $SH "$INSTALL_MAKE"
-  - $SH "make $INSTALL_GOAL"
+  - $SH "make $INSTALL_GOAL PYTHON=$PYTHON"
   - $SH "python --version; echo ; python2 --version ; python3 --version"
   - $SH "openssl aes-256-cbc -K $encrypted_c2402a3ad637_key -iv $encrypted_c2402a3ad637_iv -in aws_credentials_travis.yml.enc -out aws_credentials_travis.yml -d"
   - $SH "echo $test_random_key > .anslk_random_testkey"
 
 script:
-  - $SH "make prep_test AWS_ACCOUNT_NAME=travis"
-  - $SH "make test"
+  - $SH "make prep_test AWS_ACCOUNT_NAME=travis PYTHON=$PYTHON"
+  - $SH "make test PYTHON=$PYTHON"
   - $SH "rm aws_credentials_travis.yml"
 
 after_script:
