--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,6 @@ python:
 services:
   - docker
 
-# Ubuntu doesn't work properly because the python3-gpgme is an old version (2.10) without key export!
-# we use this only to access shellcheck and so on
-
 stages:
   - test
   - deploy
@@ -17,19 +14,22 @@ stages:
 jobs:
   include:
     - stage: test
+      # Ubuntu doesn't work properly because the python3-gpgme is an
+      # old version (2.10) without key export!  we use this only to
+      # access shellcheck and so on
       name: test-local-ubuntu
-      env: DOCKER_SH="docker exec -t backup-test sh -vxc" DOCKER_IMAGE=alpine:latest PYTHON=python3.6 MAKE="make --trace" AWS_DEFAULT_REGION=us-east-2
+      env: DOCKER_SH="docker exec -t backup-test bash -vxc" DOCKER_IMAGE=ubuntu:latest PYTHON=python3.6 MAKE="make -d" AWS_DEFAULT_REGION=eu-central-1
       script:
         - sh -vx ./build-script/docker_start.sh
         - sh -vx ./build-script/before_script.sh
-        - $DOCKER_SH "INSTALL_GOAL=apk_install SHELLCHECK=/bin/true build-script/docker_prep.sh"
-        - $DOCKER_SH "$MAKE lint pytest PYTHON=$PYTHON"
-    - name: test-functional-ubuntu
-      env: SH="docker exec -t backup-test bash -vxc" DOCKER_IMAGE=ubuntu:latest MAKE="make -d" AWS_DEFAULT_REGION=eu-entral-1
+        - $DOCKER_SH "./build-script/alpine_container_prep.sh"
+        - $DOCKER_SH "$MAKE lint pytest PYTHON=$PYTHON SHELLCHEC=/bin/true"
+    - name: test-functional-alpine
+      env: DOCKER_SH="docker exec -t backup-test sh -vxc" DOCKER_IMAGE=alpine:latest PYTHON=python3.7 MAKE="make --trace" AWS_DEFAULT_REGION=us-east-2
       script:
         - sh -vx ./build-script/docker_start.sh
         - sh -vx ./build-script/before_script.sh
-        - $DOCKER_SH "PYTHON=python3.7 build-script/docker_prep.sh"
+        - $DOCKER_SH "./build-script/ubuntu_container_prep.sh"
         - $DOCKER_SH "$MAKE behave doctest PYTHON=$PYTHON AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION"
     - stage: deploy
       before_deploy:
