--- a/.travis.yml
+++ b/.travis.yml
@@ -22,15 +22,15 @@ jobs:
       script:
         - sh -vx ./build-script/docker_start.sh
         - sh -vx ./build-script/before_script.sh
-        - $DOCKER_SH "./build-script/alpine_container_prep.sh"
-        - $DOCKER_SH "$MAKE lint pytest PYTHON=$PYTHON SHELLCHEC=/bin/true"
+        - $DOCKER_SH "./build-script/ubuntu_container_prep.sh"
+        - $DOCKER_SH "$MAKE lint pytest PYTHON=$PYTHON"
     - name: test-functional-alpine
       env: DOCKER_SH="docker exec -t backup-test sh -vxc" DOCKER_IMAGE=alpine:latest PYTHON=python3.7 MAKE="make --trace" AWS_DEFAULT_REGION=us-east-2
       script:
         - sh -vx ./build-script/docker_start.sh
         - sh -vx ./build-script/before_script.sh
-        - $DOCKER_SH "./build-script/ubuntu_container_prep.sh"
-        - $DOCKER_SH "$MAKE behave doctest PYTHON=$PYTHON AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION"
+        - $DOCKER_SH "./build-script/alpine_container_prep.sh"
+        - $DOCKER_SH "$MAKE behave doctest PYTHON=$PYTHON AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION SHELLCHECK=/bin/true"
     - stage: deploy
       before_deploy:
         # Set up git user name and tag this commit
