--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,11 @@ jobs:
         - $DOCKER_SH "$MAKE behave PYTHON=$PYTHON AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION SHELLCHECK=/bin/true"
         - $DOCKER_SH "source aws_credentials.env; export AWS_REGION AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY; $MAKE doctest PYTHON=$PYTHON AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION SHELLCHECK=/bin/true"
     - stage: deploy
-      before_deploy:
-        # Set up git user name and tag this commit
+      script:
         # - $DOCKER_SH git config --local user.name "YOUR GIT USER NAME"
         # - $DOCKER_SH git config --local user.email "YOUR GIT USER EMAIL"
-        - sh -vx build-script/before_deploy.sh
+        - sh -vx ./build-script/before_deploy.sh
+        - true
       deploy:
         provider: releases
         api_key:
