--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,12 +24,15 @@ repos:
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: 'master'  # Use the sha / tag you want to point at
   hooks:
-  -   id: mypy
-      exclude: '^features-mocked/environment.py' 
+  - id: mypy
+    exclude: '^features-mocked/environment.py' 
 - repo: https://github.com/jumanjihouse/pre-commit-hooks
   rev: 'master'  # Use the sha / tag you want to point at
   hooks:
-  -   id: shellcheck
+  - id: shellcheck
+  - id: markdownlint
+    args:
+    - -r MD046=consistent
 -   repo: https://github.com/Lucas-C/pre-commit-hooks-go
     sha: v1.0.0
     hooks:
