--- a/prepare-test-enc-backup.yml
+++ b/prepare-test-enc-backup.yml
@@ -35,6 +35,10 @@
               aws_secret_key: '{{ aws_secret_key }}'
               security_token: '{{ security_token }}'
 
+        - name: verify some variables are properly defined
+          assert:
+            that: "test_key | length > 3"
+
     - tags:
         - given that I have configured a base path in SSM
       set_fact: 
