--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,9 @@ jobs:
     - $DOCKER_SH "PYTHON=$PYTHON ./build-script/alpine_container_prep.sh"
     - $DOCKER_SH "$MAKE behave PYTHON=$PYTHON AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION
       SHELLCHECK=/bin/true"
-    - $DOCKER_SH "source aws_credentials.env; export AWS_REGION AWS_ACCESS_KEY_ID
-      AWS_SECRET_ACCESS_KEY; $MAKE doctest PYTHON=$PYTHON AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION
+    - $DOCKER_SH "set +vx; source aws_credentials.env; set -vx ;
+      export AWS_REGION AWS_ACCESS_KEY_ID AWS_SECRET_ACCESS_KEY;
+      $MAKE doctest PYTHON=$PYTHON AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION
       SHELLCHECK=/bin/true"
   - stage: deploy
     script:
