--- a/roles/test_account/tasks/main.yml
+++ b/roles/test_account/tasks/main.yml
@@ -2,7 +2,7 @@
 #
 #  This adds IAM requirements to allow the deployment script to be
 #  run.  Since it creates and modifies IAM users roles and policies it
-#  needs to be run with full IAM account manager privilages.  
+#  needs to be run with full IAM account manager privilages.
 #
 #  This script was based on the lambda and lambda policy testcases out
 #  of Ansible's integration tests.  As such it is licensed under the
@@ -24,10 +24,25 @@
               aws_secret_key: '{{ admin_aws_secret_key }}'
               security_token: '{{ admin_security_token }}'
 
-    - name: create IAM definitions
+    - name: create IAM definitions for local user
       block:
         - iam_user:
              name: "{{ backup_test_user }}"
+             # FullAccess should be eliminated but AWS doesnt have any
+             # standard limited policies that match so we will need to
+             # create our own policies for that.  Do it later.
+             managed_policy:
+               - arn:aws:iam::aws:policy/AWSLambdaFullAccess
+               - arn:aws:iam::aws:policy/IAMFullAccess
+               - arn:aws:iam::aws:policy/AmazonEC2FullAccess
+               - arn:aws:iam::aws:policy/AmazonSSMFullAccess
+             state: present
+             <<: *admin_aws_connection_info
+
+    - name: create IAM definitions CI user
+      block:
+        - iam_user:
+             name: "{{ travis_backup_test_user }}"
              # FullAccess should be eliminated but AWS doesnt have any
              # standard limited policies that match so we will need to
              # create our own policies for that.  Do it later.
@@ -43,7 +58,7 @@
       block:
         - shell: |
             for i in $(aws iam list-access-keys  --user-name={{ backup_test_user }} \
-               | grep AccessKeyId | sed -e 's/",//' -e 's/.*"//' ) 
+               | grep AccessKeyId | sed -e 's/",//' -e 's/.*"//' )
             do
               aws iam delete-access-key  --user-name={{backup_test_user}} --access-key-id=$i
             done
@@ -61,6 +76,26 @@
               AWS_DEFAULT_REGION: '{{aws_region}}'
           register: cred_create_result
 
+        - shell: |
+            for i in $(aws iam list-access-keys  --user-name={{ travis_backup_test_user }} \
+               | grep AccessKeyId | sed -e 's/",//' -e 's/.*"//' )
+            do
+              aws iam delete-access-key  --user-name={{travis_backup_test_user}} --access-key-id=$i
+            done
+          environment:
+              AWS_ACCESS_KEY_ID: '{{admin_aws_access_key}}'
+              AWS_SECRET_ACCESS_KEY: '{{admin_aws_secret_key}}'
+    #              AWS_SESSION_TOKEN: '{{security_token}}'
+              AWS_DEFAULT_REGION: '{{aws_region}}'
+
+        - command: "aws iam create-access-key --user-name={{travis_backup_test_user}}"
+          environment:
+              AWS_ACCESS_KEY_ID: '{{admin_aws_access_key}}'
+              AWS_SECRET_ACCESS_KEY: '{{admin_aws_secret_key}}'
+    #              AWS_SESSION_TOKEN: '{{security_token}}'
+              AWS_DEFAULT_REGION: '{{aws_region}}'
+          register: travis_cred_create_result
+
         - copy:
             content: |
               ---
@@ -70,9 +105,21 @@
               security_token:
             dest: /tmp/id_output
 
+        - copy:
+            content: |
+              ---
+              aws_region: {{ aws_region }}
+              aws_access_key: {{(travis_cred_create_result.stdout | from_json).AccessKey.AccessKeyId}}
+              aws_secret_key: {{(travis_cred_create_result.stdout | from_json).AccessKey.SecretAccessKey}}
+              security_token:
+            dest: /tmp/id_output_travis
+
         - fetch:
             src: /tmp/id_output
             dest: "aws_credentials_{{aws_account_name}}.yml"
             flat: yes
 
-            
+        - fetch:
+            src: /tmp/id_output_travis
+            dest: "encrypted_build_files/aws_credentials_travis.yml"
+            flat: yes
