create env file for travis during prepare

--- a/roles/test_enc_backup/tasks/main.yml
+++ b/roles/test_enc_backup/tasks/main.yml
@@ -88,3 +88,8 @@
               src: "{{conf_temp.path}}"
               dest: "test-config.env"
               flat: yes
+
+          - fetch:
+              src: "{{cred_temp.path}}"
+              dest: "encrypted_build_files/aws_credentials.env"
+              flat: yes
