--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,12 +14,12 @@ repos:
     - id: detect-private-key
     - id: end-of-file-fixer
     - id: flake8
-      exclude: '^features[-a-z0-9]*/steps' 
+      exclude: '^features/.*_steps/.*'
       args:
         - --ignore=W503,E402,E501
         - --max-line-length=131
     - id: flake8
-      files: '^features[-a-z0-9]*/steps/.*\.py'
+      files: '^features[-a-z0-9]*/*_steps/.*\.py'
       args:
         - --ignore=W503,E402,E501,F811
         - --max-line-length=131
