--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -31,7 +31,7 @@ repos:
   - id: markdownlint
     args:
     - -r MD046=consistent
--   repo: https://github.com/Lucas-C/pre-commit-hooks-go
-    sha: v1.0.0
-    hooks:
-    -   id: checkmake
+# -   repo: https://github.com/Lucas-C/pre-commit-hooks-go
+#     sha: v1.0.0
+#     hooks:
+#     -   id: checkmake
