--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,14 @@ jobs:
   include:
   - stage: test
     name: test-local-ubuntu
-    env: DOCKER_SH="docker exec -t backup-test bash -vxc" DOCKER_IMAGE=ubuntu:latest
-      PYTHON=python3.6 MAKE="make" AWS_DEFAULT_REGION=eu-central-1
+    env: DOCKER_SH="docker exec -t backup-test bash -vxc" DOCKER_IMAGE=ubuntu:disco
+      PYTHON=python3.7 MAKE="make" AWS_DEFAULT_REGION=eu-central-1
     script:
     - sh -vx ./build-script/docker_start.sh
     - sh -vx ./build-script/before_script.sh
     - $DOCKER_SH "PYTHON=$PYTHON ./build-script/ubuntu_container_prep.sh"
-    - $DOCKER_SH "$MAKE lint pytest PYTHON=$PYTHON"
+    - $DOCKER_SH "$MAKE lint PYTHON=python3.7"
+    - $DOCKER_SH "$MAKE pytest PYTHON=python3.6"
   - name: test-functional-alpine
     env: DOCKER_SH="docker exec -t backup-test sh -vxc" DOCKER_IMAGE=alpine:latest
       PYTHON=python3.7 MAKE="make --trace" AWS_DEFAULT_REGION=us-east-2
